week4 project 2 update 2
